# moveit2_for_multiple_controller

./: README.md
moveit2_welding_controller/multirobot_sim/: package.xml  setup.cfg  setup.py
moveit2_welding_controller/multirobot_sim/config/: multirobot.rviz  multirobot.rvizZone.Identifier  multirobot.urdf.xcaro  multirobot_name.rviz
moveit2_welding_controller/multirobot_sim/launch/: multirobot.launch.py  nobugs.pls.copy.py  nobugs.pls.py
moveit2_welding_controller/positioner/: .setup_assistant  CMakeLists.txt  package.xml
moveit2_welding_controller/positioner/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  positioner.ros2_control.xacro  positioner.srdf  positioner.urdf.xacro  ros2_controllers.yaml
moveit2_welding_controller/positioner/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  new.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moveit2_welding_controller/welder/: .setup_assistant  CMakeLists.txt  package.xml
moveit2_welding_controller/welder/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  welder.ros2_control.xacro  welder.srdf  welder.urdf.xacro
moveit2_welding_controller/welder/launch/: demo.launch.py  move_group.launch.py  (+7 more)
positioner_welder_sim/: .setup_assistant  CMakeLists copy.txt  CMakeLists.txt  package.xml
positioner_welder_sim/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  multirobot.ros2_control.xacro  multirobot.srdf  multirobot.urdf.xacro  ros2_controllers.yaml
positioner_welder_sim/launch/: demo.launch.py  demo.launch_sim_time.py  move_group.launch.py  moveit_rviz.launch.py  multi_robot_plan.launch.py  path_planning_follow_line.launch.py  path_planning_with_constrains.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
positioner_welder_sim/src/: bugs.cpp  multi_robot_plan_node.cpp  path_planning_follow_line_node.cpp  path_planning_with_constraints_node copy 2.cpp  path_planning_with_constraints_node.cpp
welding_kinematic_controller/: package.xml  setup.cfg  setup.py
welding_kinematic_controller/config/: config.rviz
welding_kinematic_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
welding_kinematic_controller/launch/: positioner.launch.py  simulation.launch.py  welder.launch.py
welding_kinematic_controller/urdf/: multirobot.urdf.xacro  positioner.urdf.xacro  welder.urdf.xacro
welding_kinematic_controller/welding_kinematic_controller/: inverse_kinematics.py  lookup_transform.py  robot.py
(+23 files in other folders)
