<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multirobot_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lenigovi@gmail.com">lenigovi</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>welder</build_depend>
  <build_depend>positioner</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>moveit2</build_depend>

  <exec_depend>welder</exec_depend>
  <exec_depend>positioner</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveit2</exec_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
